[package]
name = "async-event-dispatch"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["rt", "macros"] }
deadqueue = { version = "0.2.4", features = ["unlimited", "limited"] }